--- a/bancoAlimentoUNLP/login.html
+++ b/bancoAlimentoUNLP/login.html
@@ -5,8 +5,28 @@
 <head>
 	<title>Banco alimentario de la plata - Login</title>
 	<meta http-equiv="content-type" content="text/html;charset=utf-8" />
-	<link rel="stylesheet" type="text/css" href="css/loginCSS.css">
+<style>
+body{
+  background-image: url("footer.jpg");
+
+}
+
+#formLogin{
+    text-align:center;
+    margin-top:100px;
+    background-color:rgba(66,66,66,0.8);
+    margin-left:25%;
+   margin-right:25%;
+   padding:40px;
+   border-radius:6px;
+   
+}
+
+</style>	
+
 </head>
+
+
 
 <body>
 	
